[package]
name = "makeshift_instrument"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15"
anyhow = "1"
thiserror = "1"
clap = { version = "4.3", features = ["derive"] }
flume = "0.10"
bytemuck = { version = "1", features = ["derive"] }
bytes = "1"
soundfont = "0.0.2"
riff = "1"
